--- a/lesson3/style.css
+++ b/lesson3/style.css
@@ -4,7 +4,12 @@ body {
 
   text-align: center;
 }
+
+
+
 .modal {
+  position: fixed;
+  z-index: 1001;
   margin: 20px auto;
   /* border: 1px solid blueviolet; */
   width: 100px;
@@ -15,7 +20,17 @@ body {
   border: 5px dotted #000;
   border-left-color: transparent;
   animation: rot 5s ease-out infinite;
-  /* display: none; */
+  display: none;
+  background: white;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(190, 10, 10, 0.507);
+  position: fixed;
+  display: none;
+  z-index: 1;
 }
 
 @keyframes rot {
@@ -26,10 +41,4 @@ body {
   to {
     transform: rotate(360deg);
   }
-}
-
-div ::before {
-  content: '\e080';
-  width: 50px;
-  height: 50px;
 }
