--- a/modal/style.css
+++ b/modal/style.css
@@ -1,38 +1,42 @@
 body {
   margin: 0;
   padding: 0;
-
   text-align: center;
+  /* background: grey; */
 }
 
-
-
 .modal {
-  position: fixed;
-  z-index: 1001;
-  margin: 20px auto;
+  box-sizing: border-box;
+  position: absolute;
+  margin: 50px 10px 20px;
   /* border: 1px solid blueviolet; */
-  width: 100px;
-  height: 100px;
-  box-shadow: inset 0 0 50px #000;
+  width: 200px;
+  height: 200px;
+  /* box-shadow: 0px 0px 50px black; */
   border-radius: 50%;
   transition: all 0.5s;
-  border: 5px dotted #000;
+  border: 10px dotted rgba(0, 0, 0, 0.507);
   border-left-color: transparent;
+  /* border-right-style:  */
   animation: rot 5s ease-out infinite;
   display: none;
-  background: white;
 }
 
 .overlay {
   width: 100%;
   height: 100%;
-  background: rgba(190, 10, 10, 0.507);
   position: fixed;
-  display: none;
-  z-index: 1;
-}
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(80, 74, 74, 0.507);
 
+  display: none;
+}
+.show {
+  display: block;
+}
 @keyframes rot {
   from {
     transform: rotate(0deg);
